--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss","node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
           },
@@ -95,7 +95,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
           }
