--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.3.0-alpha1",
     "rxjs": "~7.5.0",
+    "swiper": "^9.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
